logs/Slang/generated/hdlconv/hdlconvertor_p556.sv.log
name: hdlconvertor_p556
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p556.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p556.sv:1:1: error: language feature not yet supported
class xyz;
^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p556.sv:9:9: error: expected identifier
function new(); cov1 = new; endfunction
        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p556.sv:9:10: error: expected statement
function new(); cov1 = new; endfunction
         ^~~
